farbiges Ergebnis & Übersetzung

--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@ button {
 	font-weight:bold;
 	height:22px;
 }
+	
+	#result .win {
+		color:greenyellow
+	}
+	
+	#result .lose {
+		color:red;
+	}
+	
 .credits {
 	font-size:15px;
 	margin-top:20px;
