--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 <meta name="description" content="Welcome to the Javascript version of Slot Machine written by Saurabh Odhyan"> 
 <meta name="keywords" content="javascript, jquery, spritely, animation, sprite, background position, slot, game, games, saurabh, odhyan">
 <style>
+	
+	*:focus { /* verhindert den blauen Schatten */
+		outline: 0;
+		box-shadow:none;
+	}
 body {
 	font-family:verdana,arial;
 	padding:20px;
@@ -19,6 +24,7 @@ body {
 }
 .slot-wrapper {
 	 border: 1px solid #000000;
+	box-shadow: 3px 3px 3px 0px rgba(0,0,0,0.75);
 }
 .slot {
 	background:url("images/reel_normal.png") repeat-y; /*Taken from http://www.swish-designs.co.uk*/
@@ -31,6 +37,7 @@ body {
 .motion {
 	background:url("images/reel_blur.png") repeat-y; /*Taken from http://www.swish-designs.co.uk*/
 }
+/*
 button {
 	display:block;
 	width:138px;
@@ -39,6 +46,31 @@ button {
 	font-size:16px;
 	cursor:pointer;
 }
+*/
+	
+	button {
+		display:block;
+		width:150px;
+		height:150px;
+		border-radius: 100%;
+		margin:10px auto;
+		font-size:28px;
+		cursor:pointer;
+		border:2px solid #333;
+		background: #fefcea;
+		background: -moz-radial-gradient(center, ellipse cover, #fefcea 0%, #f1da36 100%);
+		background: -webkit-radial-gradient(center, ellipse cover, #fefcea 0%,#f1da36 100%);
+		background: radial-gradient(ellipse at center, #fefcea 0%,#f1da36 100%);
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefcea', endColorstr='#f1da36',GradientType=1 );
+		box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
+	}
+	
+	button:active {
+		width:140px;
+		height:140px;
+		box-shadow: 3px 3px 3px 0px rgba(0,0,0,0.75);
+	}
+	
 #result {
 	margin:20px 0;
 	font-size:18px;
@@ -68,7 +100,7 @@ button {
 	clear:both;
 }
 </style>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 <script src="jquery.spritely.js"></script>
 <script src="jquery.backgroundPosition.js"></script>
 <script src="slot.js"></script>
