--- a/index.html
+++ b/index.html
@@ -12,19 +12,49 @@
 		box-shadow:none;
 	}
 body {
-	font-family:verdana,arial;
+	font-family:Helvetica, Arial, sans-serif;
 	padding:20px;
 }
+	
+	h1 {
+		margin:10px 0 40px 20px;
+		text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, .1), 0 0 5px rgba(0, 0, 0, .1), 0 1px 3px rgba(0, 0, 0, .3), 0 3px 5px rgba(0, 0, 0, .2), 0 5px 10px rgba(0, 0, 0, .25), 0 10px 10px rgba(0, 0, 0, .2), 0 20px 20px rgba(0, 0, 0, .15);
+		font: normal 50px/1 "Helvetica Neue", Helvetica, Arial, sans-serif;
+		color: #fff;
+	}
+	
+	h1:first-line {
+  		font-size: 75%;
+	}
+	
 .bd {
+	margin:0 auto;
 	text-align:center;
+	width:300px;
+	height:450px;
+	border:2px solid #ccc;
+	border-bottom:4px solid #ccc;
+	border-right:4px solid #ccc;
+	background: rgba(212,228,239,1);
+	background: -moz-linear-gradient(top, rgba(212,228,239,1) 0%, rgba(134,174,204,1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(212,228,239,1)), color-stop(100%, rgba(134,174,204,1)));
+	background: -webkit-linear-gradient(top, rgba(212,228,239,1) 0%, rgba(134,174,204,1) 100%);
+	background: -o-linear-gradient(top, rgba(212,228,239,1) 0%, rgba(134,174,204,1) 100%);
+	background: -ms-linear-gradient(top, rgba(212,228,239,1) 0%, rgba(134,174,204,1) 100%);
+	background: linear-gradient(to bottom, rgba(212,228,239,1) 0%, rgba(134,174,204,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d4e4ef', endColorstr='#86aecc', GradientType=0 );
+/*	box-shadow: 10px 10px 15px 0px rgba(0,0,0,0.5);*/
+	box-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, .1), 0 0 5px rgba(0, 0, 0, .1), 0 1px 3px rgba(0, 0, 0, .3), 0 3px 5px rgba(0, 0, 0, .2), 0 5px 10px rgba(0, 0, 0, .25), 0 10px 10px rgba(0, 0, 0, .2), 0 20px 20px rgba(0, 0, 0, .15), 0 40px 40px rgba(0, 0, 0, .10);
 }
 .container {
 	margin:0 auto;
 	width:266px;
 }
 .slot-wrapper {
-	 border: 1px solid #000000;
-	box-shadow: 3px 3px 3px 0px rgba(0,0,0,0.75);
+	border: 1px solid #000000;
+	background:#fff;
+	box-shadow: 3px 3px 3px 0px rgba(0,0,0,0.25);
+	margin-bottom:5px;
 }
 .slot {
 	background:url("images/reel_normal.png") repeat-y; /*Taken from http://www.swish-designs.co.uk*/
@@ -37,16 +67,6 @@ body {
 .motion {
 	background:url("images/reel_blur.png") repeat-y; /*Taken from http://www.swish-designs.co.uk*/
 }
-/*
-button {
-	display:block;
-	width:138px;
-	height:33px;
-	margin:20px 60px;
-	font-size:16px;
-	cursor:pointer;
-}
-*/
 	
 	button {
 		display:block;
@@ -54,6 +74,7 @@ button {
 		height:150px;
 		border-radius: 100%;
 		margin:10px auto;
+		margin-bottom:20px;
 		font-size:28px;
 		cursor:pointer;
 		border:2px solid #333;
@@ -63,19 +84,27 @@ button {
 		background: radial-gradient(ellipse at center, #fefcea 0%,#f1da36 100%);
 		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefcea', endColorstr='#f1da36',GradientType=1 );
 		box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
+			-webkit-transition: all 0.25s ease;
+    	transition: all 0.25s ease;
 	}
 	
 	button:active {
+		margin:15px auto;
 		width:140px;
 		height:140px;
 		box-shadow: 3px 3px 3px 0px rgba(0,0,0,0.75);
+			-webkit-transition: all 0.25s ease;
+    	transition: all 0.25s ease;
 	}
 	
 #result {
-	margin:20px 0;
-	font-size:18px;
+	margin-top:10px;
+	padding:10px 0 20px 0;
+	font-size:24px;
 	font-weight:bold;
 	height:22px;
+	background:#fff;
+	border:1px solid #999;
 }
 	
 	#result .win {
@@ -110,7 +139,7 @@ button {
 <div class="hd">
 </div>
 <div class="bd">
-	<h1>JS Slotmachine</h1>
+	<h1>Lobsterlounge<br>Slotmachine</h1>
 	<div class="container">
 		<div class="slot-wrapper">
 			<div id="slot1" class="slot"></div>
