--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 		outline: 0;
 		box-shadow:none;
 	}
+	
+	html {
+	height:100%;
+background: #f5f6f6;
+background: -moz-linear-gradient(-45deg, #f5f6f6 0%, #dbdce2 21%, #b8bac6 49%, #dddfe3 80%, #f5f6f6 100%);
+background: -webkit-linear-gradient(-45deg, #f5f6f6 0%,#dbdce2 21%,#b8bac6 49%,#dddfe3 80%,#f5f6f6 100%);
+background: linear-gradient(135deg, #f5f6f6 0%,#dbdce2 21%,#b8bac6 49%,#dddfe3 80%,#f5f6f6 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f6f6', endColorstr='#f5f6f6',GradientType=1 );
+	}
+	
 body {
 	font-family:Helvetica, Arial, sans-serif;
 	padding:20px;
