--- a/index.html
+++ b/index.html
@@ -28,12 +28,11 @@
 </head>
 
 <body onload="soundOn()">
+	
+	<h1>Stefkos<br>Groschengrab</h1>
 
-
-	<div class="hd">
-	</div>
-	<div class="bd">
-		<h1>Stefkos<br>Groschengrab</h1>
+	<div class="wrapper">
+		
 		<div class="container">
 			<div class="slot-wrapper">
 				<div id="slot1" class="slot"></div>
@@ -41,6 +40,7 @@
 				<div id="slot3" class="slot"></div>
 				<div class="clear"></div>
 			</div>
+<!--
 			<div id="result"></div>
 			<audio class="win" preload="auto">
 				<source src="audio/win.mp3">
@@ -51,7 +51,19 @@
 			<div>
 				<button id="control">Start</button>
 			</div>
+-->
 		</div>
+		<div>
+				<button id="control">Start</button>
+			</div>
+		<div id="result"></div>
+			<audio class="win" preload="auto">
+				<source src="audio/win.mp3">
+			</audio>
+			<audio class="lose" preload="auto">
+				<source src="audio/boring.mp3">
+			</audio>
+			
 	</div>
 
 </body>
