--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
 			<audio class="lose" preload="auto">
 				<source src="audio/boring.mp3">
 			</audio>
+			<audio class="slot" preload="auto">
+				<source src="audio/slot-machine.mp3">
+			</audio>
 		</div>
 	</main>
 	
