--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
 			</div>
 			<div id="result"></div>
+			<div id="coins" style="border.1px solid red; width:50px; height:30px; background:white; margin:0 auto;"></div>
 			<div>
 				<button id="control">Start</button>
 			</div>
