--- a/index.html
+++ b/index.html
@@ -40,39 +40,41 @@
 				<span>TO<br>THE</span>
 			</div>
 			<div class="fab">Fabulous</div>
-			<div class="las">Slot Machine</div>
-			<div class="nv">by STEFKO</div>
+			<div class="title">Slot Machine</div>
+			<div class="name">by STEFKO</div>
 		</div>
 	</header>
-	
-	<main>
-		<div class="wrapper">
-			<div class="container">
-				<div class="slot-wrapper">
-					<div id="slot1" class="slot"></div>
-					<div id="slot2" class="slot"></div>
-					<div id="slot3" class="slot"></div>
-					<div class="clear"></div>
-				</div>
 
+	<main>
+
+		<div class="container">
+			<div class="slot-wrapper">
+				<div id="slot1" class="slot"></div>
+				<div id="slot2" class="slot"></div>
+				<div id="slot3" class="slot"></div>
+				<div class="clear"></div>
 			</div>
 			<div id="result"></div>
-			<div id="coins" style="border.1px solid red; width:50px; height:30px; background:white; margin:0 auto;"></div>
+			<div id="coins"></div>
 			<div>
 				<button id="control">Start</button>
 			</div>
-			
-			<audio class="win" preload="auto">
-				<source src="audio/win.mp3">
-			</audio>
-			<audio class="lose" preload="auto">
-				<source src="audio/boring.mp3">
-			</audio>
-			<audio class="slot" preload="auto">
-				<source src="audio/slot-machine.mp3">
-			</audio>
 		</div>
+
+		
+
+		<audio class="win" preload="auto">
+			<source src="audio/win.mp3">
+		</audio>
+		<audio class="lose" preload="auto">
+			<source src="audio/boring.mp3">
+		</audio>
+		<audio class="slot" preload="auto">
+			<source src="audio/slot-machine.mp3">
+		</audio>
+
 	</main>
-	
+
 </body>
+
 </html>
