--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
 	<meta charset="utf-8">
 	<title>Slot Machine in Javascript</title>
 	<meta name="description" content="Welcome to the Javascript version of Slot Machine written by Saurabh Odhyan">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.css">
+	<meta name="viewport" content="width=device-width,initial-scale=0.75">
+	<link rel="stylesheet" href="css/style.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Mr+Dafoe:300,400|Open+Sans:300,400" rel="stylesheet">
 	<script>document.addEventListener("touchstart",function(){},!0)</script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 	<script src="js/jquery.spritely.js"></script>
 	<script src="js/jquery.backgroundPosition.js"></script>
-	<script src="js/slot.js"></script>
+	<script src="js/slot.min.js"></script>
 	<script>
 		function soundOn() {
-//			// run on page load
-//			var button = document.getElementByTagName('button');
-//			var audio = document.getElementByTagName('audio');
-//	
-//			var onClick = function() {
-//				audio.play(); // audio will load and then play
-//			}	;
-//			button.addEventListener('click', onClick, false);
+			// run on page load
+			var button = document.getElementByTagName('button');
+			var audio = document.getElementByTagName('audio');
+	
+			var onClick = function() {
+				audio.play(); // audio will load and then play
+			};
+			button.addEventListener('click', onClick, false);
 		}
 	</script>
 
