--- a/lost.html
+++ b/lost.html
@@ -17,9 +17,9 @@
 
 		<h1>Sorry,<br>Du hast verloren</h1>
 		<div>
-			<button class="back">
-				<a href="index.html">zurück</a>
-			</button>
+			<div class="back">
+				<h2><a href="index.html">neues Spiel</a></h2>
+			</div>
 		</div>
 
 	</main>
